# bevy_jam_3

./: Cargo.toml  todo.md
.github/workflows/: release.yml
assets/shaders/: timer_material.wgsl
scripts/: build_wasm.sh  run_wasm.sh  static-web-server.toml
src/: currency.rs  idle_gains.rs  main.rs  new_node.rs  persisted_game.rs  picking.rs  picking_aabb.rs  poisson.rs  progress.rs  status_visual.rs  timer_material.rs
wasm/: index.html
