[package]
name = "Sidle_Ffect"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.10"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking.git", branch = "beta" }
bevy_picking_highlight = { git = "https://github.com/aevyrie/bevy_mod_picking.git", branch = "beta" }
bevy_picking_input = { git = "https://github.com/aevyrie/bevy_mod_picking.git", branch = "beta" }
bevy_picking_core = { git = "https://github.com/aevyrie/bevy_mod_picking.git", branch = "beta" }
bevy_picking_sprite = { git = "https://github.com/aevyrie/bevy_mod_picking.git", branch = "beta" }
rand = { version = "*", features = ["small_rng"] }
rand_chacha = "*"
bevy_pancam = "*"
bevy_prototype_debug_lines = "*"
bevy_easings = "0.10"
serde = "*"
serde_json = "*"
instant = "*"
bevy_pkv = "*"
bevy-inspector-egui = "*"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.profile]
inherits = "release"
debug = 1

[profile.dd]
inherits = "dev"

[profile.dd.package."*"]
opt-level = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
